openshift-files/keycloak.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations: {}
    labels:
      app: keycloak
    name: keycloak-data
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: keycloak
    annotations:
      sidecar.istio.io/inject: "false"
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: keycloak
      spec:
        containers:
        - name: keycloak
          image: docker.io/jboss/keycloak:3.4.3.Final
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /auth
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /auth
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10

    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    name: keycloak
  spec:
    ports:
    - name: http
      port: 8080
    type: NodePort
    selector:
      app: keycloak
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      expose: "true"
      app: keycloak
    name: keycloak
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: keycloak
